--- a/reademe.html
+++ b/reademe.html
@@ -6,6 +6,39 @@
     <title>Document</title>
 </head>
 <body>
-    <a href='https://yanm05.github.io/JQ放大镜/放大镜.html'>JQ放大镜</a>
+    <div>
+        <h2>jquery</h2>
+        <a href='https://yanm05.github.io/JQ放大镜/放大镜.html'>放大镜</a>
+        <a href='https://yanm05.github.io/JQ轮播图/轮播图.html'>轮播图</a>
+        <a href='https://yanm05.github.io/JQ图片对比/图片对比.html'>图片对比</a>
+    </div>
+    <div>
+        <h2>表单美化</h2>
+        <a href="https://yanm05.github.io/表单美化/美化表单.html"></a>
+    </div>
+    <div>
+        <h2>svg</h2>
+        <a href="https://yanm05.github.io/svg/svg.html"></a>
+    </div>
+    <div>
+        <h2>loading</h2>
+        <a href="https://yanm05.github.io/loading/loading.html"></a>
+    </div>
+    <div>
+        <h2>canvas机器人</h2>
+        <a href="https://yanm05.github.io/canvas安卓机器人/canvas小机器人.html"></a>
+    </div>
+    <div>
+        <h2>播放器</h2>
+        <a href="https://yanm05.github.io/播放器/音乐播放器.html"></a>
+    </div>
+    <div>
+        <h2>仿美丽说</h2>
+        <a href="https://yanm05.github.io/仿美丽说/index.html"></a>
+    </div>
+    <div>
+        <h2>滑动验证</h2>
+        <a href="https://yanm05.github.io/滑动验证/滑动验证.html"></a>
+    </div>
 </body>
 </html>
