--- a/reademe.html
+++ b/reademe.html
@@ -9,8 +9,8 @@
     <div>
         <h2>jquery</h2>
         <a href='https://yanm05.github.io/JQ放大镜/放大镜.html'>放大镜</a>
-        <a href='https://yanm05.github.io/JQ轮播图/轮播图.html'>轮播图</a>
-        <a href='https://yanm05.github.io/JQ图片对比/图片对比.html'>图片对比</a>
+        <a href='https://yanm05.github.io/jQ轮播图/轮播图.html'>轮播图</a>
+        <a href='https://yanm05.github.io/jQ图片对比/图片对比.html'>图片对比</a>
     </div>
     <div>
         <h2>表单美化</h2>
